--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,6 +16,7 @@ html,body{
     margin:0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
+    scroll-behavior: smooth;
 }
 
 body{ 
